--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore configuration files that shouldn't be committed
 appsettings.Development.json
+/IronWill.WebApi/appsettings.Development.json
+
 
 # Ignore Visual Studio temporary files, folders, and logs
 .vs/
