#2 Added ApplicationUser class and added two properties - Joining Date - Status - Also moved entities to .Models project

--- a/IronWill.Models/IronWill.Models.csproj
+++ b/IronWill.Models/IronWill.Models.csproj
@@ -9,9 +9,15 @@
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Enums\" />
+    <None Remove="Entities\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Enums\" />
+    <Folder Include="Entities\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.20" />
   </ItemGroup>
 </Project>
